syntax = "proto3";

package simple;

// ðŸ‘‡ FIXED: give a Go import path and package name
option go_package = "./generated/;simple";

service SimpleService {
    rpc SendMessage (SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest {
    string myMessage = 1;
}

message SimpleResponse {
    string resply = 1;
    bool received = 2;
}
